# breakout

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  setup.bat  setup.sh
src/: Ball.cpp  Ball.hpp  Brick.cpp  Brick.hpp  Game.cpp  Game.hpp  GameState.hpp  Paddle.cpp  Paddle.hpp  constants.hpp  main.cpp
